--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +41,8 @@ dependencies:
   provider:
   font_awesome_flutter:
   http:
+  file_picker:
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
