--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   http:
   file_picker:
   path_provider: ^2.0.14
+  intl: ^0.19.0
+  # permission_handler: ^10.4.0
+  # device_info_plus: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,7 @@ flutter:
   assets:
     - assets/microsoft.png
     - assets/coop.png
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
