--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   file_picker:
   path_provider: ^2.0.14
   intl: ^0.19.0
+  open_file: ^3.2.1
   # permission_handler: ^10.4.0
   # device_info_plus: ^9.0.2
 
